@@ -29,6 +29,7 @@
     * 4386 FIX: Fixed exception when creating links from service views to service group views...
     * 4388 FIX: Views: Fixed exception with host tag columns which tag has been deleted...
     * 4389 FIX: Views: Fixed "Cached" column when cache interval is reported to be 0...
+    * 4397 FIX: Views: Fixed datasource KeyError exception...
 
     WATO:
     * 4373 FIX: Timeperiods: iCal events with multiple days can now be imported
